fixed three js white container white flickering on page reload

--- a/data/web/static/css/pong.css
+++ b/data/web/static/css/pong.css
@@ -45,27 +45,9 @@
     margin-bottom: 20px;
 }
 
-#game-field {
-	width: 0;
-	height: 0;
-	background-color: rgb(11, 4, 38);
-	margin: 0 auto;
-	position: relative;
-
-}
-
 .game-container {
     position: relative;
     margin: 0 auto;
-
-}
-
-#paddle-left, #paddle-right, #ball {
-    width: 0px;
-    height: 0px;
-    background-color: white;
-    position: absolute;
-    border-radius: 15px;
 }
 
 #score-board {
@@ -76,8 +58,4 @@
 	color: white;
 	font-size: 24px;
 	z-index: 1;
-}
-
-#separator {
-	margin: 0 10px;
 }
